# monobind

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: FindMono.cmake  ModuleMonoDllCopy.cmake  TryToCopy.cmake
examples/angourimath/: CMakeLists.txt  angourimath.cpp
examples/custom_types/: CMakeLists.txt  CustomTypes.cs  custom_types.cpp
examples/exporting/: CMakeLists.txt  CodeGen.cs  SampleFile.cs  exporting.cpp
examples/method_parameters/: CMakeLists.txt  MethodParameters.cs  method_parameters.cpp
examples/sandbox/: CMakeLists.txt  Dog.cs  sandbox.cpp
examples/simple_function_call/: CMakeLists.txt  SimpleFunctionCall.cs  simple_function_call.cpp
examples/virtual_methods/: CMakeLists.txt  VirtualMethods.cs  virtual_methods.cpp
include/monobind/: assembly.h  class_type.h  code_generator.h  compiler.h  converters.h  converters_fwd.h  domain.h  exception_handling.h  export.h  field_view.h  gc.h  method.h  method_view.h  mono.h  mono_api_include.h  monobind.h  object.h  ostream_operators.h  property_view.h  type_accessor.h  type_names.h
